# CDE_Workshop

./: .gitignore
1A_simple-jobs_UI_and_CLI/: Data_Extraction_Over_150k.py  Data_Extraction_Sub_150k.py  commands.txt
1B_interactive_sessions_UI/: AirportsInCities.py  simpledataframe.py
2_workflow-airflow-orchestration/: LC_KPI_reporting.py  LC_airflow_config.py  LC_data_exploration.py  LC_data_exploration_with_secrets.py  LC_ml_model.py  commands.txt
3_advanced-cde-API/: commands.txt
4_iceberg/: iceberg_demo.txt
5_custom_runtimes/: Dockerfile  Readme.md  command-line-steps.txt  spark-sql.py
6A_create_custom_python_packages/: README.md  pyproject.toml
6A_create_custom_python_packages/src/example_package_superellipse/: example.py
6A_create_custom_python_packages/src/example_package_superellipse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
6A_create_custom_python_packages/tests/: config.ini  test.py
6B_use_custom_python_packages/: Demo-script-custom-python  README.md  requirements.txt  use_custom_package.py
7A_custom_airflow_oprators/: TestHTTPOperator.py  commands.txt  requirements.txt  simple_dag_using_llama-index.py
7B_custom_airflow_operators/: pyproject.toml  script
7B_custom_airflow_operators/cde_setup/: Demo-script-custom-python  requirements.txt
8_xcom-cde/: xcom_ex2.py
9_nifi-interop/: Nifi-connect-testing.ipynb  commodity_prices_pipeline_dag.py  curl-commands copy.txt
